--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ Version：20200708
     <meta name="keywords" content="风也小窝,风也的个人主页,编程与学习,自律与生活">
     <meta name="theme-color" content="#000">
     <link rel="shortcut icon" href="" type="image/x-icon">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/kaygb/Apage@master/pws20200708/style.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/Moekylin/moekylin@main/.assets/css/style.css">
     <style>
             h1::before{
                 content: 'Moekylin\'s HOME';
