--- a/index.html
+++ b/index.html
@@ -5,17 +5,18 @@ Version：20200708
 -->
 <!DOCTYPE html>
 <html lang="">
+<link rel="icon" type="image/x-icon" href="@attachment/img/avatar.png">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Moekylin's Home</title>
-    <meta name="keywords" content="风也小窝,风也的个人主页,编程与学习,自律与生活">
+    <title>Moekylin Home Page | Cyber Security</title>
+    <meta name="keywords" content="网络安全 Cyber Security Moekylin">
     <meta name="theme-color" content="#000">
     <link rel="shortcut icon" href="" type="image/x-icon">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/Moekylin/moekylin@main/.assets/css/style.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/Moekylin/moekylin@main/@attachment/css/style.css">
     <style>
             h1::before{
-                content: 'Moekylin\'s HOME';
+                content: '77 Home Page';
                 position: absolute;
                 color: #b2bec348;
                 z-index: -1;
@@ -26,28 +27,32 @@ Version：20200708
 </head>
 <body>
     <div class="zz">
-        <img class="lazy-img" data-original="https://i.loli.net/2020/09/14/v4Si8BIupOVcwm6.jpg" src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAEALAAAAAABAAEAAAICRAEAOw==" alt="" srcset="">
+        <img class="lazy-img" data-original="https://s2.loli.net/2022/09/10/j7ynHAr5B3ou8aF.jpg" src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAEALAAAAAABAAEAAAICRAEAOw==" alt="" srcset="">
     </div>
 
     <div class="main">
         
         <div class="title">
-            <h1>Moekylin's HOME</h1>
+            <h1>77 Home Page</h1>
         </div>
         <div class="content">
-            <p>网络安全爱好者</p>
-            <p>So, enjoy life!</p>
-            <p>Whatever you do, you hold on to that foolishly hopeful smile.</p>
-            <p>You can catch me on my <a href="https://blog.kaygb.com/" target="_blank">blog</a> or read my <a href="https://wiki.eas1.cn/" target="_blank">wiki</a>.</p>
+            <p style="font-size:30px">About Me</p>
+            <p style="text-indent:1em;font-size:18px;font-family:Microsoft YaHei">网络安全爱好者，喜欢研究Web安全</p>
+            <p style="text-indent:1em;font-size:18px;font-family:Microsoft YaHei">📖 Blog: <a href="https://yuque.com/moekylin/blog">https://yuque.com/moekylin/blog</a></p>
+            <p style="text-indent:1em;font-size:18px;font-family:Microsoft YaHei">🛰️ Github: <a href="https://github.com/moekylin">https://github.com/moekylin</a></p>
+            <p style="text-indent:1em;font-size:18px;font-family:Microsoft YaHei">📧 Email: <a href="https://github.com/moekylin">moekylin@qq.com</a></p>
+            <p style="font-size:30px">Project List</p>
+            <p style="text-indent:1em;font-size:18px;font-family:Microsoft YaHei"><a href="https://github.com/Moekylin/Do1ng">https://github.com/Moekylin/Do1ng</a> - 个人维护的安全知识框架</p>
+            <!-- <p>You can catch me on my <a href="https://blog.kaygb.com/" target="_blank">blog</a> or read my <a href="https://wiki.eas1.cn/" target="_blank">wiki</a>.</p> -->
         </div>
-        <div class="footer">
+        <!-- <div class="footer">
             <span>&copy; 风也小窝</span>&nbsp;
             <span><a href="http://beian.miit.gov.cn" target="_blank" rel="nofollow">豫ICP备19002054号-6</a></span>&nbsp;
             <span>Design by : <a href="https://blog.kaygb.com/" target="_blank">kaygb</a></span>
             <br>
             <span><a class="upyun" href="https://console.upyun.com/register/?invite=r1FdZxBoH" target="_blank" rel="nofollow"><img src="https://i.loli.net/2020/09/14/YbXKvLAJhlWN1Ox.png" style="width:50px;"></a></span>
             
-        </div>
+        </div> -->
 
     </div>
 
