--- a/index.html
+++ b/index.html
@@ -37,12 +37,12 @@ Version：20200708
         </div>
         <div class="content">
             <p style="font-size:30px">About Me</p>
-            <p style="text-indent:1em;font-size:18px;font-family:Microsoft YaHei">网络安全爱好者，喜欢研究Web安全</p>
-            <p style="text-indent:1em;font-size:18px;font-family:Microsoft YaHei">📖 Blog: <a href="https://yuque.com/moekylin/blog">https://yuque.com/moekylin/blog</a></p>
-            <p style="text-indent:1em;font-size:18px;font-family:Microsoft YaHei">🛰️ Github: <a href="https://github.com/moekylin">https://github.com/moekylin</a></p>
-            <p style="text-indent:1em;font-size:18px;font-family:Microsoft YaHei">📧 Email: <a href="https://github.com/moekylin">moekylin@qq.com</a></p>
+            <p style="text-indent:1em;font-size:18px;">网络安全爱好者，喜欢研究Web安全</p>
+            <p style="text-indent:1em;font-size:18px;">📖 Blog: <a href="https://yuque.com/moekylin/blog">https://yuque.com/moekylin/blog</a></p>
+            <p style="text-indent:1em;font-size:18px;">🛰️ Github: <a href="https://github.com/moekylin">https://github.com/moekylin</a></p>
+            <p style="text-indent:1em;font-size:18px;">📧 Email: <a href="https://github.com/moekylin">moekylin@qq.com</a></p>
             <p style="font-size:30px">Project List</p>
-            <p style="text-indent:1em;font-size:18px;font-family:Microsoft YaHei"><a href="https://github.com/Moekylin/Do1ng">https://github.com/Moekylin/Do1ng</a> - 个人维护的安全知识框架</p>
+            <p style="text-indent:1em;font-size:18px;"><a href="https://github.com/Moekylin/Do1ng">https://github.com/Moekylin/Do1ng</a> - 个人维护的安全知识框架</p>
             <!-- <p>You can catch me on my <a href="https://blog.kaygb.com/" target="_blank">blog</a> or read my <a href="https://wiki.eas1.cn/" target="_blank">wiki</a>.</p> -->
         </div>
         <!-- <div class="footer">
