--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@ Version：20200708
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Moekylin Home Page | Cyber Security</title>
-    <meta name="keywords" content="网络安全 Cyber Security Moekylin">
+    <title>Moekylin</title>
+    <meta name="keywords" content="Moekylin Home Page">
     <meta name="theme-color" content="#000">
     <link rel="shortcut icon" href="" type="image/x-icon">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/Moekylin/moekylin@main/@attachment/css/style.css">
