--- a/index.html
+++ b/index.html
@@ -5,14 +5,13 @@ Version：20200708
 -->
 <!DOCTYPE html>
 <html lang="">
-<link rel="icon" type="image/x-icon" href="@attachment/img/avatar.png">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Moekylin</title>
     <meta name="keywords" content="Moekylin Home Page">
     <meta name="theme-color" content="#000">
-    <link rel="shortcut icon" href="" type="image/x-icon">
+    <link rel="shortcut icon" href="@attachment/img/favicon.svg" type="image/x-icon">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/Moekylin/moekylin@main/@attachment/css/style.css">
     <style>
             h1::before{
