--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ Version：20200708
     <title>Moekylin</title>
     <meta name="keywords" content="Moekylin Home Page">
     <meta name="theme-color" content="#000">
-    <link rel="shortcut icon" href="@attachment/img/favicon.svg" type="image/x-icon">
+    <link rel="shortcut icon" href="https://cdn.jsdelivr.net/gh/Moekylin/moekylin@main/@attachment/img/favicon.svg" type="image/x-icon">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/Moekylin/moekylin@main/@attachment/css/style.css">
     <style>
             h1::before{
